unnecessary code removed; API doc fixes
