# pkg/http/rest/updateComment.go
@@ -24,11 +24,6 @@ import (
 //  403: errorResponse403
 //	404: errorResponse404
 
-// MarkCommentAsReadBy returns handler for POST /comments/:id/read_by requests
-func (s *Server) MarkCommentAsReadBy() func(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
-	return s.markAsReadBy(assetTypeComment)
-}
-
 // swagger:route POST /worknotes/{uuid}/read_by worknotes MarkWorknoteAsReadByUser
 // Marks specified worknote as read by user
 // responses:
@@ -39,13 +34,8 @@ func (s *Server) MarkCommentAsReadBy() func(w http.ResponseWriter, r *http.Reque
 //  403: errorResponse403
 //	404: errorResponse404
 
-// MarkWorknoteAsReadBy returns handler for POST /worknotes/:id/read_by requests
-func (s *Server) MarkWorknoteAsReadBy() func(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
- return s.markAsReadBy(assetTypeWorknote)
-}
-
-// markAsReadBy returns handler for POST /comments/:id/read_by requests
-func (s *Server) markAsReadBy(assetType string) func(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
+// MarkCommentAsReadBy returns handler for marking comment|worknote as read by user
+func (s *Server) MarkCommentAsReadBy(assetType string) func(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
 	return func(w http.ResponseWriter, r *http.Request, params httprouter.Params) {
 		s.logger.Info("MarkAsReadBy handler called")
 
